--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "𝐒𝐔𝐁𝐇𝐈 𝐋𝐎𝐕𝐄❤️",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://graph.org/file/f73f8ab100aa73b3286f5.jpg",
+    "logo": "https://telegra.ph/file/094ef930eaaa93fa715b8.jpg",
     "keywords": [
     "python3",
     "telegram",
